--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>DOM exercise</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <body>
   <div class="content">
     <h1 class="center">DOM exercises</h1>
-    <blockquote class="center">First of all, <b>FORK</b> this pen before you go ahead!</blockquote>
-    <p>You're about to put into practice everything you've just learnt. The order of the instructions matches the order of the slides.</p>
-    <p>You must <em>not</em> edit the HTML, nor the CSS of this pen. Therefore, using only JavaScript, walk through every "box" and follow the instructions!</p>
+    <p id="box">Using only JavaScript, walk through every "box" and follow the instructions!</p>
   </div>
   
   <div class="content">
@@ -69,5 +73,7 @@
 
     <div id="texture-background" class="texture-sample"></div>
   </div>
- 
+ <script type="text/javascript" src="index.js"></script>
 </body>
+
+</html>
