--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <div class="content">
     <h1 class="center">DOM exercises</h1>
     <p id="box">Using only JavaScript, walk through every "box" and follow the instructions!</p>
+    <p id="source-code">CHECK the code from <a href="https://github.com/SkyZone-LLC/dom-assignment-3" target="_blank">here.</a> Then analyze <code>js</code> file or even improve the solutions</p>
   </div>
   
   <div class="content">
